Meteor ファイルアップロード テスト用 サンプル

--- a/client/main.html
+++ b/client/main.html
@@ -23,7 +23,7 @@
   </ol>
  -->  <ol>
   {{#each images}}
-    <li><img src="{{this.url}}"></li>
+    <li>{{this.url}}<img src="{{this.url}}" width="128"></li>
   {{/each}}
   </ol>
 </template>
